--- a/src/es-web-ui/es-web-ui.html
+++ b/src/es-web-ui/es-web-ui.html
@@ -158,7 +158,7 @@
             <paper-input id="nameInput" label="Name" value="{{name::change}}" required
                          error-message="required"></paper-input>
             <paper-textarea id="propInput" label="Property (Multi-line supported)"
-                            value="{{prop::change}}"></paper-textarea>
+                            value="{{prop::input}}"></paper-textarea>
 
             <div id="warning"></div>
 
